--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -1,8 +1,8 @@
-{% extends 'mainapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 
-    {% include 'mainapp/components/top_nav_panel.html' %}
+    {% include 'components/top_nav_panel.html' %}
 
         {% load email_to_link %}
 
@@ -90,5 +90,5 @@
   
 </div>
 
-    {% include 'mainapp/components/footer.html' %}
+    {% include 'components/footer.html' %}
 {% endblock content %}
