--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -1,8 +1,8 @@
-{% extends 'mainapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 
-    {% include 'mainapp/components/top_nav_panel.html' %}
+    {% include 'components/top_nav_panel.html' %}
 
     <div class="container-md">
 
@@ -128,7 +128,7 @@
 
     </div>
 
-    {% include 'mainapp/components/footer.html' %}
+    {% include 'components/footer.html' %}
 {% endblock content %}
 
 
