--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -1,8 +1,8 @@
-{% extends 'mainapp/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 
-    {% include 'mainapp/components/top_nav_panel.html' %}
+    {% include 'components/top_nav_panel.html' %}
 
     <div class="container-md">
 
@@ -10,13 +10,13 @@
 
   <div class="col-lg-8">
 
-    {% for new in page %}
+    {% for item in page %}
         <div class="card my-2">
           <div class="card-body">
-            <h5 class="card-title">{{ new.title }}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{ news.create_date|date:"Y-m-d h:i:s" }}</h6>
-            <p class="card-text">{{ new.body }}</p>
-            <a href="#" class="card-link">Подробнее</a>
+            <h5 class="card-title">{{ item.title }}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">{{ news.created|date:"Y-m-d h:i:s" }}</h6>
+            <p class="card-text">{{ item.preambule }}</p>
+            <a href="{% url 'mainapp:news_detail' pk=item.pk %}" class="card-link">Подробнее</a>
           </div>
         </div>
     {% endfor %}
@@ -83,5 +83,5 @@
 
     </div>
 
-    {% include 'mainapp/components/footer.html' %}
+    {% include 'components/footer.html' %}
 {% endblock content %}
