--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -9,9 +9,13 @@
             </p>
             <p>
             <ul class="list-unstyled">
-                <li><a href="/mainapp/">Домашняя</a></li>
-                <li><a href="/mainapp/news">Новости</a></li>
-                <li><a href="/mainapp/login">Войти</a></li>
+                <li><a href="{% url 'mainapp:main' %}">Домашняя</a></li>
+                <li><a href="{% url 'mainapp:news' %}">Новости</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'authapp:logout' %}">Выйти</a></li>
+                {% else %}
+                    <li><a href="{% url 'authapp:login' %}">Войти</a></li>
+                {% endif %}
             </ul>
             </p>
         </div>
