--- a/authapp/templates/registration/login.html
+++ b/authapp/templates/registration/login.html
@@ -6,7 +6,7 @@
             style="height: 100vh; margin: 0">
             <div class="text-center">
                 <p>
-                    <a href="{% url 'mainapp:main' %}"><img src="{% static 'img/logo.png' %}" alt=""></a>
+                    <a href="{% url 'mainapp:main_page' %}"><img src="{% static 'img/logo.png' %}" alt=""></a>
                 </p>
                 <h2>Вход пользователя</h2>
                 <form method="POST">
