--- a/templates/components/top_nav_panel.html
+++ b/templates/components/top_nav_panel.html
@@ -18,7 +18,7 @@
                 </li>
                 <li class="nav-item {% if request.path == 'mainapp:courses' %}
                     active{% endif %}">
-                    <a class="nav-link" href="/mainapp/courses_list">Курсы</a>
+                    <a class="nav-link" href="/mainapp/courses">Курсы</a>
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
