--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -4,7 +4,7 @@
 
     {% include 'components/top_nav_panel.html' %}
 
-        {% load email_to_link %}
+    {% load email_to_link crispy_forms_tags %}
 
     <div class="container-md">
 
@@ -89,6 +89,18 @@
   </div>
   
 </div>
+
+{% if form %}
+<p>
+<h3>Отправить сообщение в техподдержку</h3>
+<form method="post">
+  {% csrf_token %}
+  {{ form|crispy }}
+  <button type="submit" class="btn btn-primary btn-block">Отаправить</button>
+</form>
+</p>
+{% endif %}
+
 
     {% include 'components/footer.html' %}
 {% endblock content %}
